<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="kosp_settings_title">KOSP settings</string>
    <string name="kosp_settings_summary">Lockscreen, QS panel, Statusbar, Theme</string>
    <string name="menu_key_kosp" translatable="false">top_level_kosp</string>
    <string name="lockscreen_settings_title">Lockscreen settings</string>
    <string name="lockscreen_settings_summary">DT2S, Secure QS, Edge light</string>
    <string name="lockscreen_charging_info_title">Show charging info in lockscreen</string>
    <string name="lockscreen_charging_info_summary">Shows temperature, charging current and more while plugged in</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreeen to sleep</string>
    <string name="hide_qs_title">Hide QS in secure lockscreen</string>
    <string name="hide_qs_summary">Hides QS if device is locked. Notification shade can still be pulled down, but QS won\'t be visible</string>
    <string name="edge_light_title">Edge light</string>
    <string name="enable_edge_light">Enable edge light</string>
    <string name="edge_light_intro_text">Display an animation along the edges of the screen when pulsing</string>
    <string name="edge_light_always_trigger_on_pulse_title">Always trigger on pulse</string>
    <string name="edge_light_always_trigger_on_pulse_summary">Whether to show edge light whenever ambient display is shown and not just for notifications</string>
    <string name="edge_light_repeat_animation_title">Repeat animation</string>
    <string name="edge_light_repeat_animation_summary_on">Repeat until timeout</string>
    <string name="edge_light_repeat_animation_summary_off">Show only once</string>
    <string name="edge_light_color_mode_title">Edge light color mode</string>
    <string name="accent_color">Accent color (Default)</string>
    <string name="notification_color">Notification color</string>
    <string name="wallpaper_color">Wallpaper color</string>
    <string name="custom_color">Custom color</string>
    <string name="edge_light_custom_color_title">Custom color</string>
    <string name="miscellaneous_settings_title">Miscellaneous settings</string>
    <string name="miscellaneous_settings_summary">Screenshot sound, Volume key music control</string>
    <string name="screenshot_shutter_sound_title">Screenshot sound</string>
    <string name="screenshot_shutter_sound_summary">Enable screenshot sound and vibration</string>
    <string name="volume_button_music_control_title">Skip tracks with volume buttons</string>
    <string name="volume_button_music_control_summary">Long press volume up for skipping to the next track and vice-versa</string>
    <string name="qs_panel_settings_title">QS panel settings</string>
    <string name="qs_panel_settings_summary">Brightness slider, QS battery estimates, QS footer text</string>
    <string name="brightness_slider">Brightness slider</string>
    <string name="qqs_show_brightness_title">Show brightness slider in qqs</string>
    <string name="brightness_slider_position_title">Brightness slider position</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="show_auto_brightness_button_title">Show auto brightness button</string>
    <string name="qs_show_battery_estimate_title">Battery estimates</string>
    <string name="qs_show_battery_estimate_summary_on">Show battery estimates in QS</string>
    <string name="qs_show_battery_estimate_summary_off">Hide battery estimates in QS</string>
    <string name="qs_footer_text_show_title">Show QS footer text</string>
    <string name="qs_footer_text_string_title">Customize footer text</string>
    <string name="qs_footer_text_string_summary">Set to empty for default \"KOSP\"</string>
    <string name="secure_keyguard_tiles_title">Require user unlocking to use sensitive tiles</string>
    <string name="statusbar_settings_title">Statusbar settings</string>
    <string name="statusbar_settings_summary">Network traffic, Battery styles, Combined signal icons, Notification count</string>
    <string name="network_traffic_category_title">Network traffic</string>
    <string name="network_traffic_intro_text">
        Shows current network traffic speed in statusbar.
        The monitor shows the speed dynamically such that it alternates between
        upload and download speed each second
    </string>
    <string name="enable_network_traffic">Enable network traffic monitor</string>
    <string name="statusbar_network_traffic_threshold_tx_title">Auto hide threshold for upload</string>
    <string name="statusbar_network_traffic_threshold_rx_title">Auto hide threshold for download</string>
    <string name="statusbar_network_traffic_unit_text_size_title">Network traffic unit text size</string>
    <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
    <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
    <string name="statusbar_battery_category_title">Battery</string>
    <string name="statusbar_battery_style_title">Battery icon style</string>
    <string name="battery_style_portrait">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_text">Text</string>
    <string name="statusbar_battery_show_percent_inside_title">Show battery percent inside icon</string>
    <string name="combined_status_bar_signal_icons_title">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar. Restart SystemUI or system for changes to take effect</string>
    <string name="status_bar_notif_count_title">Notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications at the bottom right corner of statusbar notification icon</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="privacy">Privacy</string>
    <string name="camera_mic_icons_title">Enable camera and microphone privacy indicators</string>
    <string name="location_indicators_title">Enable location privacy indicator</string>
    <string name="theme_settings_title">Theme settings</string>
    <string name="theme_settings_summary">Icon pack, Fonts</string>
    <string name="icon_pack_preference_title">Icon pack</string>
    <string name="font_preference_title">Headline / Body font</string>
    <string name="custom_font_preference_title">Custom Headline / Body font</string>
    <string name="custom_font_preference_footer_message">Reboot after selecting a font to take effect</string>
    <string name="cannot_resolve_activity">Unable to find a suitable activity to perform this action!</string>
    <string name="invalid_font_file">Font file does not have valid postscript table</string>
    <string name="failed_to_update_font">Failed to update font</string>
    <string name="failed_to_copy_file_to_cache">Failed to copy font to cache</string>
    <string name="live_display_summary">Optimize your screen based on time of day and ambient conditions to improve readability and reduce eyestrain</string>
    <string name="live_display_mode">Display mode</string>
    <string name="live_display_color_temperature_title">Color temperature</string>
    <string name="live_display_color_temperature_summary">Day: <xliff:g id="day_temperature">%1$d</xliff:g>K  Night: <xliff:g id="night_temperature">%2$d</xliff:g>K</string>
    <string name="live_display_color_temperature_label"><xliff:g id="degrees">%1$d</xliff:g>K</string>
    <string name="live_display_day">Day</string>
    <string name="live_display_night">Night</string>
    <string name="live_display_outdoor_mode_title">Automatic outdoor mode</string>
    <string name="live_display_outdoor_mode_summary">Increase brightness and saturation automatically under bright sunlight</string>
    <string name="live_display_anti_flicker_title">Anti flicker</string>
    <string name="live_display_anti_flicker_summary">Prevent extensive flickering and reduce eye strain in low light conditions. It might degrade color accuracy and affect the way some items are displayed.</string>
    <string name="live_display_low_power_title">Reduce power consumption</string>
    <string name="live_display_low_power_summary">Adjust display for lowest power consumption without degradation</string>
    <string name="live_display_enhance_color_title">Enhance colors</string>
    <string name="live_display_enhance_color_summary">Improve color vibrance of flesh tones, scenery, and other images</string>
    <string name="live_display_color_profile_title">Color profile</string>
    <string name="live_display_color_profile_standard_title">Standard</string>
    <string name="live_display_color_profile_standard_summary">Accurate colors and bright whites</string>
    <string name="live_display_color_profile_natural_title">Natural</string>
    <string name="live_display_color_profile_natural_summary">Realistic colors and flesh tones</string>
    <string name="live_display_color_profile_dynamic_title">Dynamic</string>
    <string name="live_display_color_profile_dynamic_summary">Enhanced colors and bright whites</string>
    <string name="live_display_color_profile_cinema_title">Cinema</string>
    <string name="live_display_color_profile_cinema_summary">Perfect color reproduction for video</string>
    <string name="live_display_color_profile_astronomy_title">Astronomy</string>
    <string name="live_display_color_profile_astronomy_summary">Deep red for preserving night vision</string>
    <string name="live_display_color_profile_photography_title">Photography</string>
    <string name="live_display_color_profile_photography_summary">Perfect color reproduction for photos</string>
    <string name="live_display_color_profile_basic_title">Basic</string>
    <string name="live_display_color_profile_basic_summary">Use the display uncalibrated</string>
    <string name="live_display_color_profile_adaptive_title">Adaptive</string>
    <string name="live_display_color_profile_adaptive_summary">Colors adapt to ambient conditions</string>
    <string name="live_display_color_profile_reading_title">Reading</string>
    <string name="live_display_color_profile_reading_summary">Warmer colors for less eye strain</string>
    <string name="live_display_color_profile_srgb_title">sRGB</string>
    <string name="live_display_color_profile_srgb_summary">Colors accurate to the sRGB color space</string>
    <string name="live_display_color_profile_dci_p3_title">DCI-P3</string>
    <string name="live_display_color_profile_dci_p3_summary">Colors accurate to the DCI-P3 color space</string>
    <string name="live_display_reading_mode_title">Reading mode</string>
    <string name="live_display_reading_mode_summary">Grayscale mode for long-term reading</string>
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="picture_adjustment_title">Picture adjustment</string>
    <string name="picture_adjustment_summary">Adjust hue, saturation, intensity, and contrast</string>
    <string name="adj_hue_title">Hue</string>
    <string name="adj_saturation_title">Saturation</string>
    <string name="adj_intensity_title">Intensity</string>
</resources>