<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021-2023 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/kosp_settings_title">

    <!-- Lockscreen settings -->
    <Preference
        android:key="lockscreen_settings"
        android:title="@string/lockscreen_settings_title"
        android:summary="@string/lockscreen_settings_summary"
        android:icon="@drawable/ic_lockscreen"
        android:fragment="com.kosp.settings.lockscreen.LockscreenSettings" />

    <!-- Miscellaneous settings -->
    <Preference
        android:key="miscellaneous_settings"
        android:title="@string/miscellaneous_settings_title"
        android:summary="@string/miscellaneous_settings_summary"
        android:icon="@drawable/ic_miscellaneous"
        android:fragment="com.kosp.settings.miscellaneous.MiscellaneousSettings" />

    <!-- QS settings -->
    <Preference
        android:key="qs_settings"
        android:title="@string/qs_panel_settings_title"
        android:summary="@string/qs_panel_settings_summary"
        android:icon="@drawable/ic_qs"
        android:fragment="com.kosp.settings.qs.QSPanelSettings" />

    <!-- Statusbar settings -->
    <Preference
        android:key="statusbar_settings"
        android:title="@string/statusbar_settings_title"
        android:summary="@string/statusbar_settings_summary"
        android:icon="@drawable/ic_statusbar"
        android:fragment="com.kosp.settings.statusbar.StatusbarSettings" />

    <!-- Theme settings -->
    <Preference
        android:key="theme_settings"
        android:title="@string/theme_settings_title"
        android:summary="@string/theme_settings_summary"
        android:icon="@drawable/ic_palette"
        android:fragment="com.kosp.settings.theme.ThemeSettings" />

</PreferenceScreen>